--- a/2_settimana/Giorno_4/Amazon Page/assets/css/style.css
+++ b/2_settimana/Giorno_4/Amazon Page/assets/css/style.css
@@ -1,1 +1,145 @@
 /* Your styles here */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+/*header*/
+header {
+    width: 100%;
+    background-color: #222F3F;
+    line-height: 1.5em;
+    display:block;
+
+}
+header img {
+    text-align: left ;
+    max-width: 150px;
+    padding-left: 2em;
+}
+
+/*nav*/
+nav{
+    width: 100vw;
+    background-color: #364759;
+    display: inline-flex;
+    gap: .5rem;
+    line-height: 1.8em;  
+    padding-left: 2em; 
+
+}
+nav span {
+    font-size: 15px;
+    color: white;
+    width:auto;
+}
+nav a {
+    font-size: 15px;
+    color: white;
+    text-decoration-line: none;
+}
+
+/*Main*/
+main{
+    background-color: #E9EDEE;
+    padding-left: 30px;
+    padding-right: 30px;
+    width: auto;
+}
+#giftcards{
+    text-align: center;
+    font-size: 14px;
+    color: white;
+    background-color: #F56600;
+    line-height: 1.8em; 
+}
+
+/*pacchi*/
+#pacchi {
+    background-image: url(../images/bg-image.png);
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    height:fit-content;
+    color: white;
+    line-height: 2em;
+    padding: 30px;
+}
+#pacchi:hover{
+    background-image: url(../images/bg-img.png);
+}
+#pacchi h1 {
+    font-size: 30px;
+    padding-top: 22px;
+
+}
+/*immagini affiancate*/
+.Shop_now {    
+    background-color: white;
+    gap: .5rem;
+    line-height: 1.8em;  
+    height: fit-content; 
+}
+.Shop_now span {
+    font-weight: bold; 
+    width: 100%;
+    padding: 10px;
+}
+.Shop_now a {
+    text-decoration-line: none;
+    font-size: 12px;
+}
+.carrellata {
+    display:inline-flex;
+    padding: 0.2em;
+    
+}
+.carrellata img {
+    max-width:23%;
+    max-height: 46%;
+    border-radius: 30px;
+    box-shadow: 10px 5px 5px #a1a5aa;
+    margin: 12px;
+
+}
+/*categorie*/
+
+.categorie img {
+    max-width: 100%;
+}
+.categorie p {
+    text-align: center;
+    font-weight: bold; 
+    width: 100%;
+    padding: 10px;
+}
+.categorie a {
+    text-decoration-line: none;
+    font-size: 12px;
+}
+
+/*footer*/
+footer {
+    color: white;
+    text-align: center;
+    font-weight: bold; 
+    width: 100%;
+}
+footer p { 
+    background-color: #364759;
+    
+    line-height: 1.8em
+}
+footer a {
+    text-decoration-line: none;
+    color: white;
+}
+#logo_footer {
+    background-color: #222F3F;
+    width: 100%;
+    height: 191px;
+}
+
+#logo_footer img {
+    padding-top: 50px;
+    text-align: center;
+    max-width: 222px;
+}
