--- a/2_settimana/Giorno_4/Amazon Page/assets/css/style.css
+++ b/2_settimana/Giorno_4/Amazon Page/assets/css/style.css
@@ -18,12 +18,16 @@ header img {
 
 /*nav*/
 nav{
-    width: 100vw;
+    width: 100%;
     background-color: #364759;
-    display: inline-flex;
+    display: inline;
     gap: .5rem;
     line-height: 1.8em;  
     padding-left: 2em; 
+    padding-right: 57em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    overflow: hidden;
 
 }
 nav span {
