--- a/9_settimana/Giorno_4/Blog/src/app/components/home/home.component.html
+++ b/9_settimana/Giorno_4/Blog/src/app/components/home/home.component.html
@@ -1,16 +1,19 @@
-<app-navbar></app-navbar>
 <div class="container">
   <!-- Sezione per il primo post -->
   <div *ngIf="postArr.length > 0" class="first-post">
-    <h1>{{ postArr[0].title }}</h1>
+    <h1>
+      <a [routerLink]="['/post', postArr[0].id]">{{ postArr[0].title }}</a>
+    </h1>
     <p>{{ postArr[0].body }}</p>
   </div>
 
-  <!-- Sezione per i successivi 4 post -->
+  <!-- Section for random posts -->
   <div class="related-posts" *ngIf="postArr.length > 1">
     <h2>Potrebbe anche interessarti...</h2>
     <div class="related-post" *ngFor="let post of postArr.slice(1, 5)">
-      <h3>{{ post.title }}</h3>
+      <h2>
+        <a [routerLink]="['/post', post.id]">{{ post.title }}</a>
+      </h2>
       <p>{{ post.body }}</p>
     </div>
   </div>
