--- a/9_settimana/Giorno_4/Blog/src/app/components/inactive-posts/inactive-posts.component.html
+++ b/9_settimana/Giorno_4/Blog/src/app/components/inactive-posts/inactive-posts.component.html
@@ -1,7 +1,15 @@
-<div *ngFor="let post of inactivePosts" class="post">
-  <h2>
-    <a [routerLink]="['/post', post.id]">{{ post.title }}</a>
-  </h2>
-  <p>{{ post.body }}</p>
-  <p><strong>Tags:</strong> {{ post.tags.join(", ") }}</p>
+<div class="row">
+  <div *ngFor="let post of inactivePosts" class="col-lg-4 h-100">
+    <div class="card post">
+      <div class="card-body">
+        <h2 class="card-title">
+          <a [routerLink]="['/post', post.id]">{{ post.title }}</a>
+        </h2>
+        <p class="card-text">{{ post.body }}</p>
+        <p class="card-text">
+          <strong>Tags:</strong> {{ post.tags.join(", ") }}
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
