--- a/9_settimana/Giorno_4/Blog/src/app/components/post-detail/post-detail.component.html
+++ b/9_settimana/Giorno_4/Blog/src/app/components/post-detail/post-detail.component.html
@@ -1,5 +1,7 @@
-<div *ngIf="post">
-  <h2>{{ post.title }}</h2>
-  <p>{{ post.body }}</p>
-  <p><strong>Tags:</strong> {{ post.tags.join(", ") }}</p>
+<div *ngIf="post" class="card">
+  <div class="card-body">
+    <h2 class="card-title">{{ post.title }}</h2>
+    <p class="card-text">{{ post.body }}</p>
+    <p class="card-text"><strong>Tags:</strong> {{ post.tags.join(", ") }}</p>
+  </div>
 </div>
