--- a/9_settimana/Giorno_5/BrumBrum/src/app/main-components/navbar/navbar.component.html
+++ b/9_settimana/Giorno_5/BrumBrum/src/app/main-components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-sm bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button
