--- a/9_settimana/Giorno_5/BrumBrum/src/app/main-components/navbar/navbar.component.html
+++ b/9_settimana/Giorno_5/BrumBrum/src/app/main-components/navbar/navbar.component.html
@@ -2,6 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button
+      (click)="show = !show"
       class="navbar-toggler"
       type="button"
       data-bs-toggle="collapse"
@@ -12,7 +13,11 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div
+      class="collapse navbar-collapse"
+      id="navbarSupportedContent"
+      [ngClass]="{ show: show }"
+    >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" routerLink="/home" routerLinkActive="active"
