--- a/10_settimana/Giorno_2/Blog/src/app/homepage/homepage.component.html
+++ b/10_settimana/Giorno_2/Blog/src/app/homepage/homepage.component.html
@@ -69,6 +69,15 @@
 </div>
 
 <section class="row">
+  <div class="tags">
+    <span
+      class="badge bg-primary me-1"
+      *ngFor="let tag of allTags"
+      (click)="filterPostsByTag(tag)"
+    >
+      {{ tag }}
+    </span>
+  </div>
   <app-single-post
     #singlePost
     *ngFor="let post of posts"
