--- a/11_settimana/Giorno_5/Cinemino/src/app/movies/list/list.component.html
+++ b/11_settimana/Giorno_5/Cinemino/src/app/movies/list/list.component.html
@@ -5,7 +5,9 @@
       <div class="card-body">
         <h5 class="card-title">{{ movie.title }}</h5>
         <button
-          class="btn btn-primary"
+          class="btn"
+          [class.btn-primary]="!isFavorite(movie.id)"
+          [class.btn-danger]="isFavorite(movie.id)"
           (click)="addToFavorites(movie.id)"
           [disabled]="isFavorite(movie.id)"
         >
