--- a/11_settimana/Giorno_5/Cinemino/src/app/auth/login/login.component.html
+++ b/11_settimana/Giorno_5/Cinemino/src/app/auth/login/login.component.html
@@ -1,10 +1,14 @@
-<h1>Login</h1>
-
-<form>
-
-  <input type="email" name="email" [(ngModel)]="authData.email" placeholder="email" class="form-control">
-  <input type="password" name="password" [(ngModel)]="authData.password" placeholder="password" class="form-control mt-3">
-
-  <button (click)="login()" class="btn btn-primary mt-3">Accedi</button>
-
-</form>
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="card p-4" style="width: 100%; max-width: 400px;">
+    <h1 class="text-center mb-4">Login</h1>
+    <form>
+      <div class="mb-3">
+        <input type="email" name="email" [(ngModel)]="authData.email" placeholder="Email" class="form-control">
+      </div>
+      <div class="mb-3">
+        <input type="password" name="password" [(ngModel)]="authData.password" placeholder="Password" class="form-control">
+      </div>
+      <button type="button" (click)="login()" class="btn btn-primary w-100">Accedi</button>
+    </form>
+  </div>
+</div>
