--- a/11_settimana/Giorno_5/Cinemino/src/app/movies/list/list.component.html
+++ b/11_settimana/Giorno_5/Cinemino/src/app/movies/list/list.component.html
@@ -1,18 +1,21 @@
-<div class="row">
-  <div class="col-md-4 mb-4" *ngFor="let movie of movies">
-    <div class="card">
-      <img class="card-img-top" [src]="movie.posterUrl" alt="Movie Poster" />
-      <div class="card-body">
-        <h5 class="card-title">{{ movie.title }}</h5>
-        <button
-          class="btn"
-          [class.btn-primary]="!isFavorite(movie.id)"
-          [class.btn-danger]="isFavorite(movie.id)"
-          (click)="addToFavorites(movie.id)"
-          [disabled]="isFavorite(movie.id)"
-        >
-          {{ isFavorite(movie.id) ? "Added to Favorites" : "Add to Favorites" }}
-        </button>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-md-4 mb-4" *ngFor="let movie of movies">
+      <div class="card h-100">
+        <img class="card-img-top" [src]="movie.posterUrl" alt="Movie Poster" />
+        <div class="card-body">
+          <h5 class="card-title">{{ movie.title }}</h5>
+          <button
+            class="btn mt-2"
+            [class.btn-primary]="!isFavorite(movie.id)"
+            [class.btn-danger]="isFavorite(movie.id)"
+            (click)="addToFavorites(movie.id)"
+          >
+            {{
+              isFavorite(movie.id) ? "Added to Favorites" : "Add to Favorites"
+            }}
+          </button>
+        </div>
       </div>
     </div>
   </div>
